--- a/index.html
+++ b/index.html
@@ -2,11 +2,17 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+
+
+
+  <link rel="stylesheet" href="style.css">
+    <title>Homework 7</title>
   </head>
   <body>
 <h1>GEO 370: Homework 7</h1>
 <h2>Lillian Hawkins</h2>
+
+<img src="GenXmap.png" alt="Homework 7 map">
 
 <a href="GenXmap.png">GenX map</a>
 
@@ -17,9 +23,11 @@
 <p>I presented the information as a proportional symbol map since the data dealt with pollution at certain points. </p>
 
     <h3>Links</h3>
-<a href="GenX2021averages.csv"> clean CSV </a>
-<a href="GenXavgsamplingResults.geojson"> GeoJSON</a>
-<a href="https://deq.nc.gov/news/key-issues/genx-investigation">NCDEQ GenX Investigation Website</a>
+<p><a href="GenX2021averages.csv"> clean CSV </a></p>
+
+<p><a href="GenXavgsamplingResults.geojson"> GeoJSON</a></p>
+
+<p><a href="https://deq.nc.gov/news/key-issues/genx-investigation">NCDEQ GenX Investigation Website</a></p>
 
 
 
