--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <p>I presented the information as a proportional symbol map since the data dealt with pollution at certain points. </p>
 
     <h3>Links</h3>
+    <p><a href="https://github.com/lilyhawk/GEO370HW7">GitHub Repository</a></p>
 <p><a href="GenX2021averages.csv"> clean CSV </a></p>
 
 <p><a href="GenXavgsamplingResults.geojson"> GeoJSON</a></p>
