--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <p>I chose to show the sampling results of GenX because it's what interests me. I am from Wilmington, NC and the PFAS pollution of the Cape Fear River is what made me major in environmental studies. Last semester I worked closes with CleanCapeFear fighting for water quality so I am very familiar with the data I used for the map. This was a new way for me to analyze and present this data. </p>
 
-<p>I presented the information as a proportional symbol map since the data dealt with pollution at certain points. </p>
+<p>I presented the information as a proportional symbol map since the data dealt with pollution at certain points. I used a red circle for my symbology because of the association between red and hazardous material. This map is ESPG: 3857. </p>
 
     <h3>Links</h3>
     <p><a href="https://github.com/lilyhawk/GEO370HW7">GitHub Repository</a></p>
